--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food Lover Restaurant</title>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <!--External Css links-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+        <!--NAVBAR CODE-->
+
+        <nav  class="navbar navbar-expand-sm fixed-top">
+            <div class="container">
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
+                    <span>1341</span>
+                </button>
+                <a href="#" class="navbar-brand"><img src="./images/logo.png" class="img-fluid" alt="Brand" width="50" height="50"></a>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">MENU</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">OFFERS</a></li>
+                    </ul>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">GALLERY</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">BLOG</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!--HEADER-->
+        <header class="jumbotron">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-4 offset-sm-2">
+                        <img class="img-fluid" src="./images/header_img.png" alt="logo">
+                    </div>
+                    <div class="col-12 col-sm-4">
+                        <h1>Contact us for best breakfast</h1>
+                        <p>We take inspiration from the World's best cuisines, and create a unique fusion 
+                            experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
