--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Food Lover Restaurant</title>
     <!-- Required meta tags always come first -->
-    <meta charset="utf-8">    
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
@@ -12,51 +13,210 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-        <!--NAVBAR CODE-->
+    <!--NAVBAR CODE-->
 
-        <nav  class="navbar navbar-expand-sm fixed-top">
-            <div class="container">
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
-                    <span>1341</span>
-                </button>
-                <a href="#" class="navbar-brand"><img src="./images/logo.png" class="img-fluid" alt="Brand" width="50" height="50"></a>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">ABOUT</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">MENU</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">OFFERS</a></li>
-                    </ul>
+    <nav class="navbar navbar-expand-sm fixed-top">
+        <div class="container">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
+                <span>1341</span>
+            </button>
+            <a href="#" class="navbar-brand"><img src="./images/logo.png" class="img-fluid" alt="Brand" width="100"
+                    height="100"></a>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#menu">MENU</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#offers">OFFERS</a></li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#gallery">GALLERY</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#blog">BLOG</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!--HEADER-->
+    <header class="jumbotron">
+        <div class="container header">
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <img class="img-fluid" src="./images/header_img.png" alt="logo">
                 </div>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">GALLERY</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">BLOG</a></li>
-                    </ul>
+                <div class="col-12 col-sm-6">
+                    <h1>Contact us for best breakfast</h1>
+                    <p>We take inspiration from the World's best cuisines, and create a unique fusion
+                        experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
             </div>
-        </nav>
+        </div>
+    </header>
 
-        <!--HEADER-->
-        <header class="jumbotron">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-sm-4 offset-sm-2">
-                        <img class="img-fluid" src="./images/header_img.png" alt="logo">
-                    </div>
-                    <div class="col-12 col-sm-4">
-                        <h1>Contact us for best breakfast</h1>
-                        <p>We take inspiration from the World's best cuisines, and create a unique fusion 
-                            experience. Our lipsmacking creations will tickle your culinary senses!</p>
+    <!--ABOUT US-->
+    <section class="about" id="about">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-4">
+                    <img alt="image" class="img-fluid" src="./images/header_img.png">
+                </div>
+                <div class="col-12 col-md-6">
+                    <h1>About Us</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptatibus ex debitis aliquid sed porro omnis, numquam quaerat animi pariatur,
+                        sint quia id accusamus autem, nesciunt dicta. Fuga alias optio aliquam.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--info-->
+    <section class="blog" id="blog">
+        <div class="container py-5 my-5">
+            <div class="row text-left py-5">
+                <div class="col-12 col-sm-10 m-auto ml-md-5 col-md-8 col-lg-6">
+                    <div class="fdb-box">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-xl-8 text-center">
+                                <h1>Our Food Quality</h1>
+                                <p class="lead">When she reached the first hills of the Italic Mountains, she had a last
+                                    view back on the skyline of her hometown Bookmarksgrove</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </header>
+        </div>
+    </section>
+
+    <!--Gallery-->
+    <section class="gallery" id="gallery">
+        <div class="container">
+            <div class="row text-center justify-content-center">
+                <div class="col-8">
+                    <h1>Our Food Gallery</h1>
+                </div>
+            </div>
+
+            <div class="row text-center mt-5">
+                <div class="col-4 mb-5">
+                    <img alt="image" class="img-fluid" src="./images/header_back.jpg">
+                </div>
+
+                <div class="col-4">
+                    <img alt="image" class="img-fluid" src="/images/header_back.jpg">
+                </div>
+
+                <div class="col-4">
+                    <img alt="image" class="img-fluid" src="/images/header_back.jpg">
+                </div>
+                <div class="col-4">
+                    <img alt="image" class="img-fluid" src="/images/header_back.jpg">
+                </div>
+                <div class="col-4">
+                    <img alt="image" class="img-fluid" src="/images/header_back.jpg">
+                </div>
+                <div class="col-4 mb-5">
+                    <img alt="image" class="img-fluid" src="/images/header_back.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--sdfee-->
+    <section class="offers" id="offers">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-8 col-xl-6 text-center">
+                    <h1>Enjoy Our Food</h1>
+                    <p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                        language ocean. A small river named Duden flows by their place and supplies</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!--Menu-->
+    <section class="menu" id="menu">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col">
+                    <h1>Our Menu</h1>
+                </div>
+            </div>
+
+            <div class="row mt-5 align-items-top">
+                <div class="col-12 col-md-8 m-auto col-lg-4 text-center">
+                    <img alt="image" class="img-fluid" src="./images/header_back.jpg">
+                    <h2><strong>ITALIAN MUSHROOM</strong></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, magni at? Modi sed porro beatae obcaecati aspernatur explicabo harum at?</p>
+                    <h3>Price : 1.99$</h3>
+                </div>
+
+                <div class="col-12 col-md-8 col-lg-4 text-center m-auto pt-5 pt-lg-0">
+                    <img alt="image" class="img-fluid" src="./images/header_back.jpg">
+                    <h2><strong>ITALIAN MUSHROOM</strong></h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio praesentium officia ullam possimus quam ex inventore quo repellat est tenetur.</p>
+                    <h3>Price : 1.99$</h3>
+                </div>
+
+                <div class="col-12 col-md-8 m-auto col-lg-4 text-center pt-5 pt-lg-0">
+                    <img alt="image" class="img-fluid" src="./images/header_back.jpg">
+                    <h2><strong>ITALIAN MUSHROOM</strong></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nisi maxime libero commodi sequi expedita recusandae perspiciatis nesciunt iure dignissimos?</p>
+                    <h3>Price : 1.99$</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="contact" id="contact">
+        <div class="container">
+            <div class="row text-center align-items-center">
+                <div class="col">
+                    <img src="./images/logo.png" alt="logo" width="250" height="250" class="img-fluid">
+
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">ABOUT US</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SERVICES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">FOODS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">LOCATION</a>
+                        </li>
+                    </ul>
+
+                    <div class="links">
+                        <a href="#" class="mx-2"><i class="fa fa-facebook fa-lg"></i></a>
+                        <a href="#" class="mx-2"><i class="fa fa-twitter fa-lg"></i></a>
+                        <a href="#" class="mx-2"><i class="fa fa-instagram fa-lg"></i></a>
+                        <a href="#" class="mx-2"><i class="fa fa-google fa-lg"></i></a>
+                        <a href="#" class="mx-2"><i class="fa fa-pinterest fa-lg"></i></a>
+                    </div>
+                </div>
+            </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
