--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
     <!--NAVBAR CODE-->
 
-    <nav class="navbar navbar-expand-sm fixed-top">
+    <nav class="navbar navbar-expand-sm">
         <div class="container">
             <button type="button" class="btn navbar-toggler" data-toggle="collapse" data-target="#navbar">
                 <span class="fa fa-bars"></span>
             </button>
-            <a href="#" class="navbar-brand"><img src="./images/logo.png" class="img-fluid" alt="Brand" width="100"
+            <a href="#" class="navbar-brand"><img src="./images/logo.webp" class="img-fluid" alt="Brand" width="100"
                 height="100"></a>
 
             <div class="collapse navbar-collapse" id="navbar">
@@ -49,7 +49,7 @@
         <div class="container header">
             <div class="row">
                 <div class="col-12 col-sm-6">
-                    <img class="img-fluid" src="./images/header_img.png" alt="logo">
+                    <img class="img-fluid" src="./images/header_img.webp" alt="logo">
                 </div>
                 <div class="col-12 col-sm-6">
                     <h1>Contact us For Best Breakfast</h1>
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-6">
-                    <img alt="image" class="img-fluid" src="./images/about_img.jpg">
+                    <img alt="image" class="img-fluid" src="./images/about_img.webp">
                 </div>
                 <div class="col-12 col-md-6">
                     <h1>About Us</h1>
@@ -101,10 +101,10 @@
             </div>
         </div>
         <div class="hero-img">
-            <img class="img-fluid rounded-circle" src="./images/about_img.jpg" width="80%" >
+            <img class="img-fluid rounded-circle" src="./images/about_img.webp" width="80%" >
         </div>
         <div class="second-img">
-            <img class="img-fluid rounded-circle" src="./images/about_img.jpg" width="40%" >
+            <img class="img-fluid rounded-circle" src="./images/about_img.webp" width="40%" >
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#25222C" fill-opacity="1" 
             d="M0,64L48,74.7C96,85,192,107,288,96C384,85,480,43,576,64C672,85,768,171,864,208C960,245,1056,235,1152,202.7C1248,
@@ -123,24 +123,24 @@
 
             <div class="row text-center mt-5">
                 <div class="col-6 col-md-4 mb-5">
-                    <img alt="image" class="img-fluid" src="./images/g1.jpg">
+                    <img alt="image" class="img-fluid" src="./images/g1.webp">
                 </div>
 
                 <div class="col-6 col-md-4 mb-5">
-                    <img alt="image" class="img-fluid" src="/images/g2.jpg">
+                    <img alt="image" class="img-fluid" src="/images/g2.webp">
                 </div>
 
                 <div class="col-6 col-md-4 mb-5">
-                    <img alt="image" class="img-fluid" src="/images/g3.jpg">
+                    <img alt="image" class="img-fluid" src="/images/g3.webp">
                 </div>
                 <div class="col-6 col-md-4 mb-5">
-                    <img alt="image" class="img-fluid" src="/images/g4.jpg"> 
+                    <img alt="image" class="img-fluid" src="/images/g4.webp"> 
                 </div>
                 <div class="col-6 col-md-4 mb-5">
-                    <img alt="image" class="img-fluid" src="/images/g5.jpg">
+                    <img alt="image" class="img-fluid" src="/images/g5.webp">
                 </div>
                 <div class="col-6 col-md-4 mb-5">
-                    <img alt="image" class="img-fluid" src="/images/g6.jpg">
+                    <img alt="image" class="img-fluid" src="/images/g6.webp">
                 </div>
             </div>
         </div>
@@ -177,7 +177,7 @@
 
             <div class="row mt-5 align-items-top">
                 <div class="col-12 col-md-8 m-auto col-lg-4">
-                    <img alt="image" class="mb-4 img-fluid" src="./images/m1.jpg">
+                    <img alt="image" class="mb-4 img-fluid" src="./images/m1.webp">
                     <h2><strong>SPANSKOPITA</strong></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, magni at? Modi sed porro beatae
                         obcaecati aspernatur explicabo harum at?</p>
@@ -185,7 +185,7 @@
                 </div>
 
                 <div class="col-12 col-md-8 col-lg-4 m-auto pt-5 pt-lg-0">
-                    <img alt="image" class="mb-4 img-fluid" src="./images/m2.jpg">
+                    <img alt="image" class="mb-4 img-fluid" src="./images/m2.webp">
                     <h2><strong>SALAD</strong></h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio praesentium officia ullam possimus
                         quam ex inventore quo repellat est tenetur.</p>
@@ -193,7 +193,7 @@
                 </div>
 
                 <div class="col-12 col-md-8 m-auto col-lg-4 pt-5 pt-lg-0">
-                    <img alt="image" class="mb-4 img-fluid" src="./images/m3.jpg">
+                    <img alt="image" class="mb-4 img-fluid" src="./images/m3.webp">
                     <h2><strong>ITALIAN MUSHROOM</strong></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nisi maxime libero commodi sequi
                         expedita recusandae perspiciatis nesciunt iure dignissimos?</p>
@@ -209,7 +209,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <img class="img-fluid" src="./images/service_img.png" >
+                        <img class="img-fluid" src="./images/service_img.webp" >
                     </div>
                     <div class="col-12 col-md-6">
                         <h1>Enjoy Best Meal</h1>
@@ -228,7 +228,7 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <img src="./images/logo.png" alt="logo" width="250" height="250" class="img-fluid">
+                    <img src="./images/logo.webp" alt="logo" width="250" height="250" class="img-fluid">
 
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
